--- a/index.html
+++ b/index.html
@@ -285,8 +285,7 @@
 <body>
     <div class="container">
         <header>
-            <h1><i class="fas fa-code"></i> WE-MĐ06 - Thiết kế Website Động</h1>
-            <p class="subtitle">Thực hành CSS Animation & Transition - Học kỳ 2026</p>
+            <h1><i class="fas fa-code"></i>Thiết kế Website Động</h1>
         </header>
 
         <div class="labs-grid">
